Added tabs and some widget redesign.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StockMarket</string>
+    <string name="tickers">Tickers</string>
+    <string name="currencies">Currencies</string>
 </resources>
